Refactor: Improve messaging UI and add privacy controls
This commit introduces several UI/UX enhancements to the messaging and user profile screens, along with new privacy settings.

### Messaging and Inbox
- **Inbox Long-Press Actions**: Conversations can now be deleted via a contextual action menu that appears on long-press, replacing the previous delete button within each item.
- **Unread and Selection States**: Inbox items now visually indicate unread status with bold text and show a distinct background when selected.
- **Message Layouts**:
    - The layout for public, sent, and private messages has been refined for better alignment and readability.
    - Labels (`Msg:`, `to:`, `by:`) are now consistently styled.
- **Reply Input**:
    - The message input field in conversations now dynamically resizes for multi-line text.
    - An emoji button has been added, and the send button on the keyboard is now enabled.
- **Notifications**: Push notifications now navigate the user directly to the relevant screen (public or private messages).

### User Profile and Settings
- **Privacy Controls**: Users can now toggle the visibility of their badges, bio/experience, and planetary system on their public profile via new switches in the Settings screen.
- **Profile Layout**: The public profile dialog layout is updated to support the new privacy toggles, hiding sections accordingly.

### Code and Style Refinements
- **`PublicMessageAdapter` & `SentMessageAdapter`**: Refactored to use `SpannableString` for more robust text styling, applying distinct colors to sender/recipient names.
- **XML Cleanup**: Removed obsolete UI elements and constraints from various layout files, improving layout structure.
- **New Drawables**: Added icons for emoji and a background for selected inbox items.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,4 +149,7 @@
     <string name="no_blocked_users">No blocked users found.</string>
     <string name="unblock">Unblock</string>
     <string name="manage_blocked_users_title">Blocked Users</string>
+    <string name="show_badges_label">Show Badges</string>
+    <string name="show_bio_xp_label">Show Bio and Experience</string>
+    <string name="show_planetary_system_label">Show Planetary System</string>
 </resources>
